--- a/src/sass/_inc/_general.scss
+++ b/src/sass/_inc/_general.scss
@@ -908,27 +908,28 @@ button:focus {
 
     &:hover {
       box-shadow: 0 0 25px rgba(black, .1);
+      transform: scale(1.01);
     }
 
     &:last-child {
       margin-bottom: 0;
     }
 
-    &:nth-child(2n) {
-      .row {
-        flex-direction: row-reverse;
-      }
-
-      .gallery-list-item__body {
-        padding: 25px 25px 25px 0px;
-      }
-
-      .gallery-list-item__img {
-        img {
-          border-radius: 5px 0 0 5px;
-        }
-      }
-    }
+    // &:nth-child(2n) {
+    //   .row {
+    //     flex-direction: row-reverse;
+    //   }
+    //
+    //   .gallery-list-item__body {
+    //     padding: 25px 25px 25px 0px;
+    //   }
+    //
+    //   .gallery-list-item__img {
+    //     img {
+    //       border-radius: 5px 0 0 5px;
+    //     }
+    //   }
+    // }
 
     &--link {
       text-decoration: none;
@@ -950,7 +951,7 @@ button:focus {
     }
 
     &__body {
-      padding: 25px 0px 25px 25px;
+      padding: 35px 0px 35px 25px;
 
       &--title {
         font-size: 18px;
@@ -980,7 +981,130 @@ button:focus {
       &--link {
         font-size: 14px;
         color: $uss;
-        text-decoration: underline;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+// Post gallery
+
+.post-gallery {
+  &-imgs {
+    margin-top: 25px;
+  }
+
+  &-gal {
+    &--img {
+      width: 100%;
+      height: 100%;
+
+      &__img {
+        margin-top: 25px;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: block;
+        overflow: hidden;
+        border-radius: 5px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 5px;
+          object-fit: cover;
+          transition: .4s;
+
+          &:hover {
+            transform: scale(1.03);
+          }
+        }
+      }
+    }
+  }
+
+  &-main {
+    // max-width: 650px;
+    margin: 0 auto;
+
+    &--content {
+
+    }
+
+    &__post {
+      &--title {
+        margin-bottom: 5px;
+      }
+
+      &--date {
+        margin-bottom: 15px;
+        display: block;
+      }
+    }
+  }
+}
+
+// Page gallery
+
+.services-list {
+  &-item {
+    max-width: calc(50% - 30px);
+    height: 180px;
+    display: block;
+    margin: 15px;
+
+    &:nth-child(-n+2) {
+      margin-top: 0;
+    }
+
+    &:nth-child(odd) {
+      margin-left: 0;
+    }
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    &__cont {
+      padding: 5px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+      background-repeat: no-repeat!important;
+      background-size: cover!important;
+      border-radius: 3px;
+      transition: .3s;
+
+      &:hover {
+        opacity: .95;
+      }
+
+      &--title {
+        color: #fff;
+        font-weight: 300;
+        font-size: 24px;
+      }
+
+      &--desc {
+        margin-top: 5px;
+        color: #fff;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 20px;
       }
     }
   }
@@ -989,9 +1113,9 @@ button:focus {
 // sidebar
 
 .our-services {
-  border-right: 1px solid $gold;
-  border-bottom: 1px solid $gold;
-  border-left: 1px solid $gold;
+  // border-right: 1px solid $gold;
+  // border-bottom: 1px solid $gold;
+  // border-left: 1px solid $gold;
 
   &--title {
     font-size: 18px;
@@ -1012,6 +1136,152 @@ button:focus {
         &:hover {
           color: $uss-d;
         }
+      }
+    }
+  }
+}
+
+// Post last
+
+.post-footer {
+  max-width: 650px;
+  margin: 0 auto;
+}
+
+.post-meta {
+  margin-top: 25px;
+
+  &-item {
+    &--left {
+      font-weight: 500;
+      font-size: 14px;
+      color: $uss;
+    }
+
+    &--right {
+      font-weight: 300;
+      font-size: 14px;
+      color: $uss;
+    }
+  }
+}
+
+.post-pagination {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  &-item {
+    width: calc(50% - 15px);
+    padding: 10px 25px;
+    background: $l-gray2;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    transition: .31s;
+
+    &:hover {
+      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
+      transform: scale(1.01);
+    }
+
+    &__icon {
+      .icon {
+        margin-top: 4px;
+        font-size: 27px;
+        color: $d-gray2;
+      }
+    }
+
+    &__text {
+      width: calc(100% - 35px);
+
+      &--title {
+        font-size: 12px;
+        color: $d-gray2;
+      }
+
+      &--text {
+        display: block;
+        color: $uss;
+        text-decoration: none!important;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 18px;
+        color: $uss;
+        margin-top: 5px;
+        margin-bottom: 0;
+        transition: .1s;
+
+        &:hover {
+          color: $gold;
+        }
+      }
+    }
+  }
+}
+
+.post-last {
+  margin-top: 25px;
+  padding: 25px;
+  border-radius: 5px;
+  background: $l-gray2;
+
+  &--title {
+    span {
+      font-size: 14px;
+      font-weight: 500;
+      color: $uss;
+      text-transform: uppercase;
+    }
+
+    hr {
+      margin-top: 15px;
+      margin-bottom: 0;
+      background: $l-gray3;
+    }
+  }
+
+  &__items {
+    margin-top: 15px;
+
+    &--item {
+      margin-bottom: 15px;
+      // display: flex;
+      // flex-direction: column;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      &-date {
+        font-weight: 500;
+        font-size: 12px;
+        color: $uss;
+      }
+
+      &-text {
+        display: block;
+        margin-top: 5px;
+        font-weight: 300;
+        font-size: 14px;
+        text-decoration: none;
+        color: $uss;
+        transition: .1s;
+
+        &:hover {
+          color: $gold;
+        }
+      }
+
+      hr {
+        margin-top: 15px;
+        margin-bottom: 0;
+        background: $l-gray4;
       }
     }
   }
