--- a/src/sass/_inc/_mixins.scss
+++ b/src/sass/_inc/_mixins.scss
@@ -125,6 +125,10 @@
     }
   }
 
+  .sidebar {
+    margin-top: 20px;
+  }
+
   .services-h {
     padding-top: 0;
     display: flex;
@@ -291,6 +295,34 @@
 
     .btn {
       margin: 0 auto;
+    }
+  }
+
+  .gallery-list {
+    &-item {
+      &:hover {
+        box-shadow: none;
+        transform: scale(1);
+      }
+
+      .row {
+        flex-direction: column-reverse;
+      }
+
+      &__body {
+        padding: 35px 25px;
+      }
+
+      &__img {
+        max-height: 180px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 5px 5px 0 0;
+          object-fit: cover;
+        }
+      }
     }
   }
 
