--- a/src/sass/_inc/_new_menu.scss
+++ b/src/sass/_inc/_new_menu.scss
@@ -67,13 +67,30 @@
       align-items: center;
 
       .navbar-brand {
-        font-weight: bold;
-        font-size: 22px;
-        color: $uss-d;
         text-decoration: none;
         padding-top: 0;
         padding-bottom: 0;
         margin-right: 0;
+        display: flex;
+        flex-direction: row;
+
+        &-text {
+          margin-top: 20px;
+          
+          &--title {
+            font-weight: bold;
+            font-size: 32px;
+            line-height: 15px;
+            color: $uss;
+          }
+
+          &--description {
+            font-weight: normal;
+            font-size: 11px;
+            line-height: 13px;
+            color: $d-gray;
+          }
+        }
 
         img {
           max-height: 57px;
