--- a/src/sass/_inc/_general.scss
+++ b/src/sass/_inc/_general.scss
@@ -199,10 +199,21 @@ button:focus {
 
 .navbar-uss {
   background-color: #fff !important;
+  position: sticky;
+  top: 0;
 
   .navbar-nav {
     padding-top: 14px;
     padding-bottom: 14px;
+    transition: .2s;
+
+    &.nav-min {
+      top: 0!important;
+      position: sticky!important;
+      transition: .2s;
+      padding-top: 0!important;
+      padding-bottom: 0!important;
+    }
 
     li {
       &.dropdown {
@@ -900,6 +911,8 @@ button:focus {
 // gallery page
 
 .gallery-list {
+  margin: 0;
+
   &-item {
     margin-bottom: 25px;
     background: $light-gray;
@@ -1061,11 +1074,11 @@ button:focus {
     }
 
     &:nth-child(odd) {
-      margin-left: 0;
+      margin-left: 15px;
     }
 
     &:nth-child(2n) {
-      margin-right: 0;
+      margin-right: 15px;
     }
 
     a {
@@ -1110,7 +1123,318 @@ button:focus {
   }
 }
 
+// Vacancies
+
+.vacancies {
+  &-cards {
+
+  }
+
+  &-card {
+    padding: 25px 30px;
+    background: $l-gray2;
+    border-radius: 10px;
+    margin-bottom: 25px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &--title {
+      font-weight: 300;
+      font-size: 24px;
+      color: $uss;
+      margin-bottom: 20px;
+    }
+
+    &--info {
+      p {
+        font-size: 14px;
+        margin-bottom: 10px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  &-form {
+    padding: 25px;
+    background: #fff;
+    border: 1px solid $gold;
+    border-radius: 5px;
+
+    &--form {
+      padding: 0!important;
+
+      .inputs {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        .form-group {
+          width: calc(50% - 25px);
+        }
+
+        select {
+          height: 46px;
+        }
+      }
+
+      .btn-vac {
+        width: calc(50% - 25px)!important;
+      }
+
+      // .form-group {
+      //   width: calc(50% - 25px);
+      //
+      //   &-textarea {
+      //     width: 100%;
+      //   }
+      // }
+    }
+  }
+}
+
+// About
+
+.about {
+  &-title {
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  &-cont {
+    margin-top: 50px;
+  }
+
+  &-company {
+    .about-list {
+      li {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+
+        .icon {
+          font-size: 7px;
+        }
+      }
+    }
+  }
+
+  &-questions {
+    &-accordion {
+      .card {
+        margin-bottom: 15px;
+        border: none;
+        border-radius: 5px!important;
+        background: $l-gray2;
+        transition: .2s;
+
+        &:hover {
+          background: $l-gray4;
+        }
+
+        &-header {
+          padding: 0;
+          border: 0;
+          background: transparent;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          button {
+            padding: 15px 30px;
+            width: 100%;
+            text-align: left;
+            color: $uss;
+            text-decoration: none;
+            font-weight: 500;
+
+            &[aria-expanded=true] {
+              + .icon {
+                transform: rotate(180deg);
+              }
+            }
+          }
+
+          .icon {
+            position: absolute;
+            right: 20px;
+            color: $d-gray;
+          }
+        }
+
+        &-body {
+          padding: 0 30px 15px;
+        }
+      }
+    }
+  }
+
+  &-mission {
+    &-cont {
+      &--text {
+        font-weight: 300;
+        font-size: 18px;
+      }
+
+      &__list {
+        margin-top: 25px;
+
+        &--item {
+          margin-bottom: 20px;
+          display: flex;
+          flex-direction: row;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+
+          .icon {
+            margin-top: 5px;
+            margin-right: 10px;
+            color: $gold!important;
+          }
+        }
+
+        &--text {
+          display: flex;
+          flex-direction: column;
+        }
+
+        &--title {
+          font-weight: 500;
+          font-size: 18px;
+        }
+
+        &--description {
+          margin-top: 5px;
+          font-weight: 300;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  &-values {
+    &__list {
+      background: $l-gray2;
+      padding: 15px;
+      border-radius: 10px;
+
+      &--item {
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: row;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        .icon {
+          margin-top: 4px;
+          margin-right: 10px;
+          color: $uss;
+        }
+      }
+
+      &--text {
+        display: flex;
+        flex-direction: column;
+      }
+
+      &--title {
+        font-size: 18px;
+        font-weight: 500;
+      }
+
+      &--description {
+        margin-top: 5px;
+        font-size: 18px;
+        font-weight: 300;
+      }
+    }
+  }
+
+  &-founders {
+    .about {
+      &-text {
+        font-weight: 300;
+      }
+
+      &-list {
+        li {
+          display: flex;
+          align-items: center;
+
+          .icon {
+            font-size: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  &-partners {
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      &--item {
+        max-width: 30%;
+        border: 1px solid $gold;
+        border-radius: 5px;
+        padding: 15px;
+        text-align: center;
+      }
+
+      &--img {
+        display: flex;
+        align-items: center;
+        max-width: 80%;
+        height: 175px;
+        margin: 0 auto 15px;
+
+        img {
+          width: 100%;
+        }
+      }
+
+      &--title {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  &-clients {
+    .clients-box {
+      &-item {
+        &--img {
+          max-width: 70%;
+
+          img {
+            filter: grayscale(0%);
+          }
+        }
+      }
+    }
+  }
+}
+
 // sidebar
+
+.sidebar {
+  position: sticky;
+  top: 75px;
+  // position: sticky;
+}
 
 .our-services {
   // border-right: 1px solid $gold;
@@ -1141,6 +1465,43 @@ button:focus {
   }
 }
 
+.widget {
+  &:last-child {
+    padding-bottom: 0;
+  }
+
+  &_nav_menu {
+    .menu-main-container {
+      padding: 25px 20px;
+      background: $l-gray2;
+      border-radius: 3px;
+
+      .widget-title {
+        font-size: 24px;
+        margin-bottom: 10px;
+        color: $uss;
+      }
+
+      .menu {
+        li {
+          padding: 3px 0;
+
+          a {
+            color: $uss;
+            text-decoration: none;
+            padding: 3px 0;
+            transition: .2s;
+
+            &:hover {
+              padding-left: 3px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 // Post last
 
 .post-footer {
@@ -1162,6 +1523,11 @@ button:focus {
       font-weight: 300;
       font-size: 14px;
       color: $uss;
+
+      a {
+        color: $uss;
+        text-decoration: none;
+      }
     }
   }
 }
@@ -1330,6 +1696,39 @@ footer {
 
           .icon {
             margin-right: 10px;
+          }
+        }
+      }
+    }
+
+    .footer-list {
+      max-height: 120px;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        max-height: 120px;
+
+        li {
+          margin-bottom: 5px;
+          line-height: 19px;
+          max-width: 200px;
+
+          &:last-child {
+            margin-bottom: 0
+          }
+
+          a {
+            color: #fff;
+            font-size: 13px;
+
+            .icon {
+              margin-right: 10px;
+            }
           }
         }
       }
