--- a/src/sass/_inc/_mixins.scss
+++ b/src/sass/_inc/_mixins.scss
@@ -91,6 +91,42 @@
     }
   }
 
+  .vacancies {
+    &-form {
+      &--form {
+        .inputs {
+          display: flex;
+          justify-content: space-between;
+          flex-direction: row;
+          flex-wrap: wrap;
+
+          .form-group {
+            width: 100%;
+          }
+        }
+
+        .form-group-textarea {
+          margin-top: 10px;
+        }
+
+        .btn-vac {
+          width: 100%!important;
+        }
+      }
+    }
+  }
+
+  .services-list {
+    &-item {
+      max-width: calc(100% - 30px);
+      margin: 0px 15px 15px !important;
+
+      &:last-child {
+        margin-bottom: 0!important;
+      }
+    }
+  }
+
 }
 
 // Малые девайсы (sm «ландшафтные», >= 575px)
@@ -318,6 +354,7 @@
 
         img {
           width: 100%;
+          max-height: 180px;
           height: 100%;
           border-radius: 5px 5px 0 0;
           object-fit: cover;
