--- a/src/sass/_inc/_general.scss
+++ b/src/sass/_inc/_general.scss
@@ -4,6 +4,52 @@ button:focus {
   outline: none;
 }
 
+// 404
+
+.page_404 {
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  &--header {
+    max-width: 200px;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &--content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  &--title {
+    text-align: center;
+    margin-top: 25px;
+    font-size: 48px;
+    font-weight: 700;
+    color: $uss;
+  }
+
+  &--description {
+    text-align: center;
+    font-size: 24px;
+    margin-top: 5px;
+    color: $uss;
+  }
+
+  &--btn {
+    margin-top: 25px;
+  }
+}
+
 // Top bar
 
 .topbar {
