--- a/src/sass/_inc/_general.scss
+++ b/src/sass/_inc/_general.scss
@@ -717,20 +717,39 @@ button:focus {
 
   &-item {
     width: calc(25% - 15px);
-    max-height: 170px;
+    height: 320px;
     margin-bottom: 25px;
     margin-right: 20px;
     position: relative;
     display: block;
     overflow: hidden;
-    border-radius: 5px;
+    object-fit: cover;
+
+    img {
+      height: 100%;
+      width: 100%;
+
+      &.img-fluid.rounded {
+        border-radius: 0!important;
+      }
+    }
+
+    span, .flow {
+      display: none!important;
+    }
 
     &:nth-child(4n) {
       margin-right: 0;
     }
 
+    &:last-child {
+      span, .flow {
+        display: flex!important;
+      }
+    }
+
     &.next {
-      border-radius: 5px 0 0 5px;
+      // border-radius: 5px 0 0 5px;
 
       .icon {
         margin-left: 15px;
