--- a/src/sass/_inc/_login.scss
+++ b/src/sass/_inc/_login.scss
@@ -13,6 +13,10 @@
   box-shadow: 0 3px 6px rgba(0,0,0,.3);
 }
 
+#wp-auth-check-wrap #wp-auth-check {
+  width: 525px !important;
+}
+
 .login {
   background: radial-gradient(50% 50% at 50% 50%, rgba(27, 27, 27, 0) 76.56%, rgba(0, 0, 0, 0.39) 100%), url('https://images.wallpaperscraft.ru/image/derevya_vid_sverkhu_les_119826_2560x1080.jpg')!important;
 
